--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "python-envs.defaultEnvManager": "ms-python.python:system",
     "python-envs.pythonProjects": [],
     "python.analysis.extraPaths": [
-        "./DatabaseConnection"
+        "./DatabaseConnection",
+        "./DataCollection"
     ]
 }
